--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 
         <!-- TODO: Add your own database name -->
         <!-- IMPORTANT-1: The database should exist on your droplet -->
-        <db.name>startcode</db.name>
+        <db.name>dogWalkerDB</db.name>
     </properties>
     
     <dependencies>
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.6</version>
+            <version>2.10</version>
         </dependency>
         
         <!-- Test dependencies -->
